fixing spacing

--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -180,7 +180,7 @@
 .wd-tweet-title {
   width: 100%;
   margin-right: 10%;
-  margin-bottom: 12px;
+  
 }
 
 .wd-last-tweet {
